<resources>
    <string name="app_name">OnlyFriends</string>
    <string name="nav_message">Message</string>
    <string name="nav_search">Search</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_messenger">Messenger</string>
    <string name="iv_onlyfriends_logo">The logo of OnlyFriends in the screen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_login_temp">Login</string>
    <string name="splash_screen_logo">Splash Screen Logo</string>
    <string name="btn_main_login">Login</string>
    <string name="tv_main_register">New here? Create an account</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="tv_main_login">LOGIN</string>
    <string name="logo_login">The Logo in the Login Screen</string>
    <string name="tv_add_login">Already have an account? Login</string>
    <string name="tv_add_register">REGISTER</string>
    <string name="btn_add_register">Register</string>
    <string name="name">Name</string>
    <string name="nav_notifications">Notifications</string>
    <string name="et_add_handle">Handle</string>
    <string name="at">\@</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="handle_placeholder">Loading…</string>
    <string name="sample_person_name">Loading…</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="iv_my_pfp">the PFP of the user</string>
    <string name="my_profile">Hi I\'m err…</string>
    <string name="fab_add_post">The button that adds post</string>
    <string name="tv_post_content">This is where you should see the magic. Please wait.</string>
    <string name="post_title">Tell Us What is Happening</string>
    <string name="btn_post">Post</string>
    <string name="btn_post_cancel">Cancel</string>
    <string name="et_post_content">Type what you are thinking here.</string>
    <string name="follow">Follow</string>
    <string name="tv_settings_bio">You might want to know me more…</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="tv_followers">0</string>
    <string name="tv_settings_bio_placeholder">Usually this shows what\'s interesting about me but it\'s not appearing. Wait let me fix it.</string>
    <string name="sign_out_title">Wait, were you thinking of leaving? Can\'t we talk this one out?</string>
    <string name="bio_empty">You don\'t even have a bio! Weird. Go tap that Edit Profile, to have one!</string>
    <string name="what_s_interesting_about_me">What\'s interesting about me?</string>
    <string name="btn_upload_photo">Upload Photo</string>
    <string name="display_name">Display Name</string>
    <string name="edit_handle">Handle</string>
    <string name="bio">Bio</string>
    <string name="make_the_handle_unique">Make the handle unique.</string>
    <string name="chill">What name you want your friends to see.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="let_others_know_what_s_interesting_about_you">Let others know what\'s interesting about you.</string>
    <string name="soon_to_be_available">Soon to be available!</string>
    <string name="something_new">Something new?</string>
    <string name="channel_name">channel 1</string>
    <string name="channel_description">this is channel 1</string>
    <string name="tv_notif_content">Retrieving notifications of your greatness</string>
    <string name="NoSearchBio">This person hasn\'t set their bio yet</string>
</resources>