<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <TextView
        android:id="@+id/tv_edit_handle_icon"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/at"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_profile_l"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_handle" />

    <ImageView
        android:id="@+id/tv_edit_pfp"
        android:layout_width="163dp"
        android:layout_height="149dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_profile_l"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_title"
        app:srcCompat="@drawable/ic_default_user" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_edit_profile_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_edit_profile_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <Button
        android:clickable="false"
        android:backgroundTint="@color/bluish_grey"
        android:id="@+id/btn_upload_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_upload_photo"
        app:layout_constraintBottom_toBottomOf="@+id/tv_edit_pfp"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_profile_r"
        app:layout_constraintStart_toEndOf="@+id/tv_edit_pfp"
        app:layout_constraintTop_toTopOf="@+id/tv_edit_pfp" />

    <EditText
        android:id="@+id/et_displayName"
        android:importantForAutofill="no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:hint="@string/chill"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_profile_r"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_profile_l"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_display_name" />

    <TextView
        android:id="@+id/tv_edit_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/display_name"
        android:textColor="@color/of_shade2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_profile_l"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_pfp" />

    <TextView
        android:id="@+id/tv_edit_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/edit_handle"
        android:textColor="@color/of_shade2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_profile_l"
        app:layout_constraintTop_toBottomOf="@+id/et_displayName" />

    <TextView
        android:id="@+id/tv_edit_bio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:textColor="@color/of_shade2"
        android:text="@string/bio"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_profile_l"
        app:layout_constraintTop_toBottomOf="@+id/et_edit_handle" />

    <EditText
        android:id="@+id/et_edit_handle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/make_the_handle_unique"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_profile_r"
        app:layout_constraintStart_toEndOf="@+id/tv_edit_handle_icon"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_handle" />

    <EditText
        android:hint="@string/let_others_know_what_s_interesting_about_you"
        android:id="@+id/et_edit_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_profile_r"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_profile_l"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_bio_title"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_edit_save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="70dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_profile_l" />

    <Button
        android:id="@+id/btn_edit_cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/alert_red"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_profile_r" />

    <TextView
        android:id="@+id/tv_warning_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soon_to_be_available"
        android:textColor="@color/alert_red"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload_photo"
        app:layout_constraintEnd_toStartOf="@+id/gl_edit_profile_r"
        app:layout_constraintStart_toEndOf="@+id/tv_edit_pfp" />

    <ProgressBar
        android:id="@+id/pb_edit_profile"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/edit_profile_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/something_new"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/gl_edit_profile_l"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>