<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostActivity">

    <ImageView
        android:id="@+id/iv_onlyfriends_logo2"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/iv_onlyfriends_logo"
        app:layout_constraintEnd_toStartOf="@+id/gl_post_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/only_friends_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_post_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="173dp" />

    <TextView
        android:id="@+id/post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/post_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_onlyfriends_logo2"
        app:layout_constraintTop_toBottomOf="@+id/iv_onlyfriends_logo2" />

    <Button
        android:id="@+id/btn_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="2dp"
        android:text="@string/btn_post"
        app:layout_constraintBottom_toTopOf="@+id/btn_post_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_post_cancel"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_post_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_post"
        app:layout_constraintStart_toStartOf="@+id/btn_post"
        android:backgroundTint="#D13148"/>

    <EditText
        android:id="@+id/et_post_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/et_post_content"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/post_title"
        app:layout_constraintTop_toBottomOf="@+id/post_title" />

</androidx.constraintlayout.widget.ConstraintLayout>