<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/iv_add_logo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:adjustViewBounds="true"
        android:src="@drawable/only_friends_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_login" />

    <TextView
        android:id="@+id/tv_add_register"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_add_register"
        android:textAlignment="center"
        android:textColor="@color/of_shade"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_add_logo"
        app:layout_constraintVertical_bias="0.04000002"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_add_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:foregroundTint="@color/black"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minWidth="275dp"
        android:textColor="@color/black"
        android:textColorHint="@color/bluish_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_register" />

    <EditText
        android:id="@+id/et_add_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:foregroundTint="@color/black"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword|textWebPassword"
        android:minWidth="275dp"
        android:textColor="@color/black"
        android:textColorHint="@color/bluish_grey"
        app:layout_constraintEnd_toEndOf="@+id/et_add_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_add_email"
        app:layout_constraintTop_toBottomOf="@+id/et_add_email"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_add_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:foregroundTint="@color/black"
        android:gravity="start|top"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="300"
        android:textColor="@color/black"
        android:textColorHint="@color/bluish_grey"
        app:layout_constraintEnd_toEndOf="@+id/et_add_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/et_add_email"
        app:layout_constraintTop_toBottomOf="@+id/et_add_handle" />

    <EditText
        android:id="@+id/et_add_handle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:foregroundTint="@color/black"
        android:gravity="start|top"
        android:hint="@string/et_add_handle"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="300"
        android:textColor="@color/black"
        android:textColorHint="@color/bluish_grey"
        app:layout_constraintEnd_toEndOf="@+id/et_add_password"
        app:layout_constraintStart_toEndOf="@+id/tv_handle_icon"
        app:layout_constraintTop_toBottomOf="@+id/et_add_password" />

    <Button
        android:id="@+id/btn_add_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_add_register"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/et_add_name"
        app:layout_constraintStart_toStartOf="@+id/et_add_name"
        app:layout_constraintTop_toBottomOf="@+id/et_add_name" />

    <TextView
        android:id="@+id/tv_add_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/tv_add_login"
        android:textColor="@color/of_shade"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_register" />

    <TextView
        android:id="@+id/tv_handle_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/at"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_add_handle"
        app:layout_constraintStart_toStartOf="@+id/et_add_email"
        app:layout_constraintTop_toTopOf="@+id/et_add_handle" />

    <ProgressBar
        android:id="@+id/pb_register"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/teal_200"
        android:secondaryProgressTint="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>