<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchProfileActivity">

    <LinearLayout
        android:id="@+id/ll_search_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:gravity="center|top"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/gl_search_right"
        app:layout_constraintStart_toStartOf="@+id/gl_search_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_handle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="As of now, I have " />

        <TextView
            android:id="@+id/tv_search_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_followers"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" followers. Not bragging." />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_search_bio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/tv_settings_bio"
        android:textColor="@color/of_main"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/gl_search_left"
        app:layout_constraintTop_toBottomOf="@+id/ll_search_followers" />

    <TextView
        android:id="@+id/tv_search_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/tv_settings_bio_placeholder"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_search_right"
        app:layout_constraintStart_toStartOf="@+id/gl_search_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_bio_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_search_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="5dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_search_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="25dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_search_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="25dp" />

    <ImageView
        android:id="@+id/iv_profile_pfp"
        android:layout_width="68dp"
        android:layout_height="69dp"
        android:contentDescription="@string/iv_my_pfp"
        android:src="@drawable/ic_default_user"
        app:layout_constraintStart_toStartOf="@+id/gl_search_left"
        app:layout_constraintTop_toTopOf="@+id/gl_search_top" />

    <TextView
        android:id="@+id/tv_profile_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/handle_placeholder"
        android:textColor="@color/of_shade2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/my_profile"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/gl_search_left"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_pfp" />

    <Button
        android:id="@+id/btn_profile_follow"
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:text="@string/follow"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_profile_pfp"
        app:layout_constraintEnd_toStartOf="@+id/gl_search_right"
        app:layout_constraintTop_toTopOf="@+id/iv_profile_pfp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_search_right"
        app:layout_constraintStart_toStartOf="@+id/gl_search_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_bio" />

</androidx.constraintlayout.widget.ConstraintLayout>