<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/tv_search_dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/profile_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_default_user" />

        <TextView
            android:id="@+id/tv_search_handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/handle_placeholder"
            android:textSize="8sp"
            app:layout_constraintStart_toEndOf="@+id/tv_search_dp"
            app:layout_constraintTop_toTopOf="@+id/tv_search_dp" />

        <TextView
            android:id="@+id/tv_search_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_person_name"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_search_handle"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_handle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>