<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/tv_notif_dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profile_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_default_user" />

        <TextView
            android:id="@+id/tv_notif_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:text="@string/handle_placeholder"
            android:textColor="@color/of_shade2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_notif_dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_notif_message"
            android:layout_width="295dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:text="@string/tv_notif_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/tv_notif_dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_notif_type" />

        <TextView
            android:id="@+id/border"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/of_shade2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_notif_message" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>